<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/editText1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="@+id/spinner3"
        app:layout_constraintTop_toTopOf="@+id/editText4" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText5" />

    <Button
        android:id="@+id/buttonNr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr4"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonNr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr5"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr1"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonNr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr2"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonNr4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr7"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr1" />

    <Button
        android:id="@+id/buttonNr5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr8"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr4"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr2" />

    <Button
        android:id="@+id/buttonNr6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr5"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr3" />

    <Button
        android:id="@+id/buttonNr7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/buttonNrComa"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr4" />

    <Button
        android:id="@+id/buttonNr8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/buttonNr0"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr7"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr5" />

    <Button
        android:id="@+id/buttonNr9"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/buttonNrDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr8"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr6" />

    <Button
        android:id="@+id/buttonNrComa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/come"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNr0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr7" />

    <Button
        android:id="@+id/buttonNrDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNr0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr9" />

    <Button
        android:id="@+id/buttonNr0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_corners"
        android:onClick="onNrButtonPressed"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNrDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNrComa"
        app:layout_constraintTop_toBottomOf="@+id/buttonNr8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="234dp" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="510dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="130dp" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/searchableSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>